feat: enhance commit handling to skip empty commits and improve directory deletion logic